@@ -1,2 +1,1 @@
-DIST redmine_git_hosting-0.7.4.tar.gz 506657 SHA256 c10e0e76fcd20cb0f3ffd502f4f1d0aaee5e6369c42e7c72d725ae2d468a5899 SHA512 bb224d98606e7e4b34cdefe1d31defdba82e0c5c06c7c1b30e3159d3a476ba0bbee0484d1ed387e3ca41edeb1b2a82ded7517f09d053449200ecf76dceab2215 WHIRLPOOL b7c7a7a1b7803ae6146bc8d1ca96a49e5a47f0d60c57bba407f37f93201e7ca80dd00f1da529e3fe7b34ebf0cbba84a0c6eed83adcbed275e8b58fcac2227c91
 DIST redmine_git_hosting-0.7.5.tar.gz 506693 SHA256 f48f1c7bccfbb658e6a76fd198289a604ef1956be8a3b82299d3f788d0ad5029 SHA512 8c07910d648bb73028d50c159514a3722a26eca5e04008dc7c24b3c1551e46b8bf353792ad313bf1066e9e21e0a5fc7bc6c7f7209101814f69b1a5059427d150 WHIRLPOOL 76080be57e61aa3ccaf68c72f21e8e55aa63759f44fd274e6a6f1ec42ba7e665d74e2d82c9276b05eaf1b021881a8b4db22d483918d13b28b3de7147a2f1f69b
