@@ -1,3 +1,8 @@
+  25 Jul 2014; Manuel Rüger <mrueg@gentoo.org>
+  -redmine_git_hosting-0.7.4.ebuild, redmine_git_hosting-0.7.5.ebuild:
+  [www-apps/redmine_git_hosting] Add sanity check for ruby versions during
+  pkg_config. Cleanup old.
+
 *redmine_git_hosting-0.7.5 (16 Jul 2014)
 
   16 Jul 2014; Manuel Rüger <mrueg@gentoo.org>
